--- a/project/src/main/Webapp/index.html
+++ b/project/src/main/Webapp/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-	  <title>Welcome to Worldclass  DevOps Workshop-murtrhy </title>
+	  <title>Welcome to Worldclass  DevOps Workshop-Pull command </title>
 	   
   </head>
   <body bgcolor=white>
@@ -16,6 +16,6 @@
       </tr>
     </table>
 
-    <p>This session is to demonstrate how to setup git-github-murthy </p>
+    <p>This session is to demonstrate how to setup git-github-Pullcommand </p>
   </body>
 </html>
